table nowrap and other GUI fixes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,16 +12,43 @@ div.panel {
     border: 1px;
     border-style: solid;
     border-color: #ccc;
+    margin-bottom: 5px;
 }
+
+.right_top_panel{
+	padding: 0px;
+	border: 0px;
+}
+
+.pad0 {
+	padding: 0px !important;
+	border: 0px;
+	margin: 1px;
+}
+
+.pad3 {
+	padding: 3px !important;
+	border: 0px;
+}
+
+.pad1 {
+	padding: 1px !important;
+	border: 0px;
+}
+
+.font-sm {
+	 font: 12px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
 
 div.map {
     width: 100%;
-    heigth: 100%;
+
 }
 
 #map {
       width: 100%;
-      height: 100%;
+      height: 550px;
 }
 div.fill {
       width: 100%;
@@ -54,14 +81,11 @@ div.tree {
 }
 
 body {
-  margin: 0;
-  padding-top: 50px;
+  margin: 1px;
+  padding-top: 5px;
   background-color: #222;
 }
 
-#content {
-  height: calc(100vh - 64px);
-}
 
 .tab {
   float: left;
@@ -103,3 +127,5 @@ body {
   /* bricht utils beim Schieben auf die nächste Zeile */
   width: calc(10% - 1px);
 }
+
+th, td { white-space: nowrap; }
